	../namespace1.hex namespace1.out
	../namespace2.hex namespace2.out
	* Correctly implemented external atom handling in aggregates (malfunctioning in dlvhex 1.x), see also testcase agg3.hex.
	* testsuite/answerset_compare.py: New script for real set-comparison for
	verifying answer-sets (previously the order of answer sets mattered).
	* testsuite/run-dlvhex-tests.sh: Likewise.

2011-01-31  Peter Schueller  <ps@kr.tuwien.ac.at>

	* examples/variable_predicate_inputs.hex: Added .hex file that demonstrates
	a foundational dependency graph deficiency in dlvhex 1.x that prohibits
	variables for predicate inputs in dlvhex 2.x.

2011-01-10  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/PluginContainer.cpp: More verbose plugin loading.

2010-12-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/comments.hex: Add testcase for comment parsing.

2010-11-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Set error-limit to 5 for clang.
	* testsuite/Makefile.am: Likewise.

2010-11-05  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/Makefile.am (EXTRA_DIST): Add minimality and
	builtin_safety{1,2} test cases.

2010-10-30  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* NEWS: Update.

	* src/dlvhex/GuessCheckModelGenerator.cpp: Sanitize verbose output.
	* src/dlvhex/DLVProcess.cpp: Likewise.

	* src/dlvhex/GraphProcessor.cpp: Add minimality check for
	allLeavesResult before adding to resultModels (ticket #33).

	* examples/minimality.hex: New test for programs with headcycles (ticket #33).
	* examples/tests/dlvhextests.test: Likewise.
	* examples/tests/minimality.out: Likewise.
	* src/testsuite/dlvhex/TestPlugin.cpp: Likewise.

2010-10-21  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/Makefile.am: Add builtin_safety2.hex for new DLV
	release 2010-10-14.
	* examples/builtin_safety1.hex: Likewise.
	* examples/builtin_safety2.hex: Likewise.
	* examples/tests/dlvhextests.test: Likewise.