@@ -1,0 +1,2 @@
+For a documentation of the testsuite functionality please
+read the comments in testsuite/run-dlvhex-tests.sh.
